# Chalsedony

./: .gitignore  README.md  hello.py  justfile  katex_fonts_rc.py  katex_resources_rc.py  note_view.py  pyproject.toml  pyrightconfig.json  utils__get_first_markdown_heading.py
chalsedony/: api_client.py  command_palette.py  db_api.py  init_db.py  katex_fonts_rc.py  katex_resources_rc.py  main.py  main_window.py  note_model.py  note_view.py  palettes.py  settings.py  sql__schema.sql  static_resources_rc.py  styles.py  syntax_highlighter.py  utils__markdown_extensions.py  utils__neovim_ipc_handler.py  utils__ngram_filter.py  utils__tree_handler.py  utils_html_to_markdown.py  widgets__backlinks.py  widgets__drag_drop_handler.py  widgets__edit_preview.py  widgets__kbd_widgets.py  widgets__note_tree.py  widgets__order_combo_box.py  widgets__search_tab.py  widgets__stateful_tree.py  widgets__textedit__vim_bindings.py
chalsedony/static/: static.qrc
chalsedony/static/css/: admonitions.css  admonitions.css.map  code.css  markdown.css  markdown.css.map  my_pdfjs_styling.css
chalsedony/static/js/: arithmatex_auto-render.js  copy_code_block.js  datatables_init.js  my_pdfjs_init.js  service-worker.js  set_div_content.js
chalsedony/static/katex/src/fonts/: generate_fonts.py
chalsedony/static/styles/: admonitions.scss  markdown.scss
draftsmith/: api_client.py  command_palette.py  main.py  main_window.py  note_model.py  note_view.py  palettes.py  selection_dialog.py  settings.py  styles.py  utils__tree_handler.py  widgets__edit_preview.py  widgets__note_tree.py
src/chalsedony/: command_palette.py  db_api.py  main.py  main_window.py  note_model.py  selection_dialog.py  static_resources_rc.py  utils__get_first_markdown_heading.py  utils__neovim_ipc_handler.py  widgets__edit_preview.py  widgets__note_tree.py  widgets__search_tab.py  widgets__stateful_tree.py
src/chalsedony/static/: markdown.css
tests/: test_ngram_filter.py
